trying to fix spacing issues

--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
     margin: 0;
+    padding: 0;
     background-color: #05263a;
     color: rgb(223,9,5);
     font-family: "Special Elite", serif;
+    height: 100%;
 }
 
 html {
+    height: 100%;
+}
+
+.wrapper {
     height: 100%;
 }
 
@@ -16,12 +22,7 @@ html {
     background-color: black;
     padding: 3%;
     text-align: center;
-    /* background-color: #05263a; */
-    /* background-image: url("images/logo.png"); */
-    /* background-position: center; */
-    /* background-size: cover; */
-    /* background-repeat: no-repeat; */
-    /* height: 171px; */
+    height: 10%;
     padding-left: 8px;
 }
 
@@ -54,6 +55,7 @@ html {
 }
 
 #main-content {
+    height: 90%;
     background-color: black;
 }
 
@@ -65,34 +67,62 @@ html {
     align-items: center;
     border-top: 1px solid rgb(223,9,5);
     border-bottom: 1px solid rgb(223,9,5);
+    position: relative;
+}
+
+.stats-title {
+    font-size: 26px;
 }
 
 #game-bg {
-    background-image: url("images/background1.jpg");
+    /* background-image: url("images/background1.jpg"); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
+    height: 100%;
+}
+
+#game-bg img {
+    display: block;
+    max-width: 100%;
 }
 
 #game-area {
-    height: 90vh;
+    background-image: url(images/background1.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100%;
     text-align: center;
-    display: grid;
-    grid-template-columns: 16% 16% 16% 16% 16% 16%;
-    grid-template-rows: 33% 33% 33%;
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    position: relative;
+    top: 0;
+    width: 100%;
+
+    /* display: grid;
+    grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
+    grid-template-rows: 33% 33% 33%; */
+
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .card-container {
-    display: inline-block;
-    position: relative;
-    margin: 0 auto;
-    width: 85%;
+    /* display: inline-block; */
+    /* position: relative; */
+    /* margin: 0 auto; */
+    /* width: 85%; */
+    flex: 1 0 16%;
+    margin: 5px 0;
+    
+    /* flex-grow: 1;
+    flex: 1 1 16%; */
 }
 
 .card {
-    left: 5%;
-    top: 5%;
+    /* keeping this at 5% makes the cards stick out the side when using flex */
+    /* left: 1%; */
+    /* top: 5%; */
     /* height: 100%; */
     width: 100%;
     position: relative;
@@ -119,17 +149,26 @@ html {
 .front, .back {
     top: 0;
     left: 0;
-    position: absolute;
     width: 100%;
+}
+
+.front {
+    position: relative;
+}
+
+.back {
+    position: absolute;
 }
 
 .back img {
     transition: opacity 0.5s;
+    max-width: 100%;
 }
 
 .front > img {
     transition: opacity 2.5s;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.9);
+    max-width: 100%;
 }
 
 .fade .front img {
@@ -148,10 +187,6 @@ img.back:hover {
     opacity: 0;
 }
 
-.stats-title {
-    font-size: 26px;
-}
-
 .label, .value {
     font-size: 15px;
 }
@@ -165,6 +200,10 @@ img.back:hover {
     padding: 10px;
     transition: background-color .5s;
     border-radius: 10px;
+}
+
+.reset:focus{
+    outline: rgb(223,9,5)
 }
 
 .reset:hover {
@@ -239,4 +278,36 @@ img.back:hover {
     color: red;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* MEDIA QUERIES */
+
+
+/* @media screen and ()
+.stats-title {
+    font-size: 40;
+} */
+
+@media screen and (min-width: 1088px){
+    /* .card-container {
+        width: 85%;
+    } */
+}
+
+@media screen and (orientation: portrait){
+    .card-container {
+        /* flex: 1 0 30%; */
+    }
+    #game-area {
+        /* grid-template-columns: 33% 33% 33%;
+        grid-template-rows: 16% 16% 16% 16% 16% 16%; */
+    }
+
+    #game-area img {
+        /* max-height: 100%; */
+    }
+
+    /* #game-bg img {
+        max-width: 100%;
+    } */
 }
